[package]
name = "rps_game_client"
version = "0.1.0"
authors = ["terepy"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.28"
wasm-bindgen = "0.2.51"
console_error_panic_hook = "0.1.6"
serde = { version = "1.0.98", features = ["derive"] }
bincode = "1.1.4"
sha3 = "0.8.2"

[dependencies.lib]
path = "../lib"

[dependencies.array_tuple]
git = "https://github.com/pypypypypypypypypyp/array_tuple"

[dependencies.math_lib]
git = "https://github.com/pypypypypypypypypyp/math_lib"

[dependencies.web-sys]
version = "0.3.28"
features = [
	'KeyboardEvent',
	'console',
	'Location',
	'ProgressEvent',
	'FileReader',
	'Blob',
	'HtmlInputElement',
	'EventTarget',
	'Node',
	'WebSocket',
	'MessageEvent',
	'ErrorEvent',
	'MouseEvent',
	'EventTarget',
	'HtmlImageElement',
	'HtmlElement',
	'WebGlTexture',
	'WebGlUniformLocation',
	'console',
	'Document',
	'Element',
	'HtmlCanvasElement',
	'WebGlBuffer',
	'WebGlRenderingContext',
	'WebGlProgram',
	'WebGlShader',
	'Window',
]
